src/objects/IQVIA_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - This field is a lookup to Opportunity.</description>             
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>IQVIA Agreements</relationshipLabel>
        <relationshipName>IQVIAAgreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>CLM-MC-CLMCMA-18478 - This field is a store request date.</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-17657 - This field is a lookup to User and is used to store requestor.</description>             
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CLM-MC-CLMCMA-17693 - Executes sharing when set to true.</description>
        <label>Run Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SaaS_Terms_Included__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if Saas terms included or not.</description>
        <label>SaaS Terms Included?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Field__c</fullName>
        <description>This field is used to help with global search</description>
        <label>Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_For_eSignature__c</fullName>
        <description>CLM-MC-CLMCMA-18411 - formula field for send for eSignature</description>
        <formula>IF(AND(
OR($RecordType.DeveloperName == &quot;USBU&quot;,$RecordType.DeveloperName == &quot;MSA&quot;),
ISPICKVAL(Status_Category__c, &quot;In Signatures&quot;),
ISPICKVAL(Status__c, &quot;Ready for Signatures&quot;),
NOT(ISBLANK(Docusign_Account_Id__c)),
OR(
ISBLANK(DocuSign_Envelope_Id__c),
AND(
NOT(ISBLANK(DocuSign_Envelope_Id__c)),
OR(
DocuSign_Envelope_Id__r.Status__c  == &quot;Completed&quot;,
DocuSign_Envelope_Id__r.Status__c == &quot;Cancelled&quot;,
DocuSign_Envelope_Id__r.Status__c == &quot;Declined&quot;,
DocuSign_Envelope_Id__r.Status__c == &quot;Voided&quot;)))),
HYPERLINK(&quot;/lightning/cmp/c__LXC_CLM_DocuSignSendForESignature?c__recordId=&quot;+Id+&quot;&amp;c__accId=&quot;+Docusign_Account_Id__c,
IMAGE(&quot;/resource/SendeSigantureAP&quot;, &quot;Send For eSignature&quot;) , &quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>CLMCMA-17657 : field to store Service Type for EMEA</description>
        <inlineHelpText>List of all applicable types of Services.</inlineHelpText>
        <label>Service Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IQVIA Syndicated Data Service</fullName>
                </value>
                <value>
                    <fullName>IQVIA Professional Service</fullName>
                </value>
                <value>
                    <fullName>IQVIA Technology Service</fullName>
                </value>
                <value>
                    <fullName>IQVIA Clinical Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Its a multi-select picklist for services.</description>
        <inlineHelpText>List of all applicable Services for this agreement</inlineHelpText>
        <label>Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Xponent</fullName>
                </value>
                <value>
                    <fullName>Xponent Prescribing Dynamics</fullName>
                </value>
                <value>
                    <fullName>DDD</fullName>
                </value>
                <value>
                    <fullName>Electronic Data Transfer Platform Services</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>Prescriber Profiler</fullName>
                </value>
                <value>
                    <fullName>Patient Companion File</fullName>
                </value>
                <value>
                    <fullName>Provider Companion File</fullName>
                </value>
                <value>
                    <fullName>Payer Companion File</fullName>
                </value>
                <value>
                    <fullName>IQVIA Provider Medicare Part B Services</fullName>
                </value>
                <value>
                    <fullName>NPA Market Dynamics</fullName>
                </value>
                <value>
                    <fullName>NPA</fullName>
                </value>
                <value>
                    <fullName>NPA New to Brand</fullName>
                </value>
                <value>
                    <fullName>NSP</fullName>
                </value>
                <value>
                    <fullName>NMTA</fullName>
                </value>
                <value>
                    <fullName>Channel Dynamics</fullName>
                </value>
                <value>
                    <fullName>IQVIA: Out of Pocket Cost (OPC) Provider</fullName>
                </value>
                <value>
                    <fullName>Remittance Advisor (Ad Hoc)</fullName>
                </value>
                <value>
                    <fullName>Early Insight</fullName>
                </value>
                <value>
                    <fullName>RDM</fullName>
                </value>
                <value>
                    <fullName>Medical Device &amp; Supply Audit (MDSA)</fullName>
                </value>
                <value>
                    <fullName>Total Patient Tracker (TPT)</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical Sales Force Structures and Strategies (SFSS)</fullName>
                </value>
                <value>
                    <fullName>Retainer Program (National Services)</fullName>
                </value>
                <value>
                    <fullName>PlanTrak</fullName>
                </value>
                <value>
                    <fullName>PlanTrak Co-pay</fullName>
                </value>
                <value>
                    <fullName>Rx Benefit Design</fullName>
                </value>
                <value>
                    <fullName>Formulary Impact Analyzer (FIA)</fullName>
                </value>
                <value>
                    <fullName>PayerTrak</fullName>
                </value>
                <value>
                    <fullName>SMART</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CLM-MC-CLMCMA-18538 - This is a lookup field to the Site Submission object.</description>
        <label>Site Submission</label>
        <referenceTo>Site_Submission__c</referenceTo>
        <relationshipLabel>IQVIA Agreements</relationshipLabel>
        <relationshipName>IQVIA_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store Source.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Paper</fullName>
                    <default>true</default>
                    <label>Internal Paper</label>
                </value>
                <value>
                    <fullName>Other Party Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Category__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - The higher level state of the agreement – In Authoring, In Effect, Expired, etc. These are Apttus reserved values and cannot be changed.</description>
        <label>Status Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>In Authoring</fullName>
                </value>
                <value>
                    <fullName>In Signatures</fullName>
                </value>
                <value>
                    <fullName>In Effect</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                    <isActive>false</isActive>
                    <label>In Approval</label>
                </value>
                <value>
                    <fullName>In Filing</fullName>
                    <isActive>false</isActive>
                    <label>In Filing</label>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                    <isActive>false</isActive>
                    <label>Renewed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - The sub stage of an agreement – the status underneath a given status category. These are generally modifiable by the customer except for the following values which are Apttus reserved to manage agreement lifecycles:
Request, Submitted Request,
Cancelled Request, In Amendment, Being Amended, Superseded, Activated, Expired, Internal Signatures, Author Contract, Expired, Terminated, Ready for Signatures, Fully Signed, Signature Declined</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                    <label>Request</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Author Contract</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>Internal Legal Review</fullName>
                </value>
                <value>
                    <fullName>Feedback Awaited</fullName>
                </value>
                <value>
                    <fullName>Other Party Review</fullName>
                </value>
                <value>
                    <fullName>Other Party Signatures</fullName>
                </value>
                <value>
                    <fullName>Ready for Signatures</fullName>
                </value>
                <value>
                    <fullName>Fully Signed</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Cancelled Request</fullName>
                </value>
                <value>
                    <fullName>Sent for Signatures</fullName>
                </value>
                <value>
                    <fullName>Pending Templates</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Internal Signatures</fullName>
                </value>                
                <value>
                    <fullName>Accepted</fullName>
                    <isActive>false</isActive>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Approved Request</fullName>
                    <isActive>false</isActive>
                    <label>Approved Request</label>
                </value>
                <value>
                    <fullName>BUR/Finance Review</fullName>
                    <isActive>false</isActive>
                    <label>BUR/Finance Review</label>
                </value>
                <value>
                    <fullName>Being Renewed</fullName>
                    <isActive>false</isActive>
                    <label>Being Renewed</label>
                </value>
                <value>
                    <fullName>Being Terminated</fullName>
                    <isActive>false</isActive>
                    <label>Being Terminated</label>
                </value>
                <value>
                    <fullName>Budget Customer Edits</fullName>
                    <isActive>false</isActive>
                    <label>Budget Customer Edits</label>
                </value>
                <value>
                    <fullName>Budget External Review</fullName>
                    <isActive>false</isActive>
                    <label>Budget External Review</label>
                </value>
                <value>
                    <fullName>Budget Internal Review</fullName>
                    <isActive>false</isActive>
                    <label>Budget Internal Review</label>
                </value>
                <value>
                    <fullName>Budget Preparation</fullName>
                    <isActive>false</isActive>
                    <label>Budget Preparation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subnational_Terms_Included_US_Only__c</fullName>
        <description>CLM-MC-CLMCMA-17983 - This field is used to store if Subnational Terms Included or not.</description>
        <label>Subnational Terms Included? (US Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - The subtype of the agreement for a given agreement type</description>
        <label>Requested Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Master Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Licensing Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Consultant Resell SOW</fullName>
                </value>
                <value>
                    <fullName>Evaluation and Limited License Agreement</fullName>
                </value>
                <value>
                    <fullName>Litigation SOW</fullName>
                </value>
                <value>
                    <fullName>AMA</fullName>
                </value>
                <value>
                    <fullName>Business Associates Agreement (BAA)</fullName>
                </value>
                <value>
                    <fullName>Third Party Engine Data Agreement</fullName>
                </value>
                <value>
                    <fullName>Joint Datamart Agreement</fullName>
                </value>
                <value>
                    <fullName>Data Processing Agreement</fullName>
                </value>
                <value>
                    <fullName>Data Sharing Agreement</fullName>
                </value>
                <value>
                    <fullName>Reverse TPA</fullName>
                </value>
                <value>
                    <fullName>Data Agreement</fullName>
                </value>
                <value>
                    <fullName>Health Care Information Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Information Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Reseller MSA</fullName>
                </value>
                <value>
                    <fullName>Staff Augmentation MSA</fullName>
                </value>
                <value>
                    <fullName>Legacy MSA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Clinic Contract</fullName>
                </value>
                <value>
                    <fullName>Customer Contract</fullName>
                </value>
                <value>
                    <fullName>Investigator Contract</fullName>
                </value>
                <value>
                    <fullName>Letter of Indemnification</fullName>
                </value>
                <value>
                    <fullName>Vendor Contract</fullName>
                </value>
                <value>
                    <fullName>Legacy - Novasyte</fullName>
                </value>
                <value>
                    <fullName>Sub Investigator Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplemental_Terms__c</fullName>
        <description>CLM-MC-CLMCMA-18241 - This field is used to store Source.</description>
        <label>Supplemental Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMA Data</fullName>
                </value>
                <value>
                    <fullName>AMA Additional T&amp;Cs</fullName>
                </value>
                <value>
                    <fullName>AMA CPT</fullName>
                </value>
                <value>
                    <fullName>SFSS</fullName>
                </value>
                <value>
                    <fullName>SaaS Addendum</fullName>
                </value>
                <value>
                    <fullName>Fax Numbers</fullName>
                </value>
                <value>
                    <fullName>Snowflake Terms of Service</fullName>
                </value>
                <value>
                    <fullName>Dedicated Analyst Services</fullName>
                </value>
                <value>
                    <fullName>Information Services Service Plan</fullName>
                </value>
                <value>
                    <fullName>RAPID Daily Insights</fullName>
                </value>
                <value>
                    <fullName>PMTX Academic</fullName>
                </value>
                <value>
                    <fullName>OneKey</fullName>
                </value>
                <value>
                    <fullName>Data Science Workbench</fullName>
                </value>
                <value>
                    <fullName>AMA MedTech15</fullName>
                </value>
                <value>
                    <fullName>DEA Information</fullName>
                </value>
                <value>
                    <fullName>OmniChannel Client Data</fullName>
                </value>
                <value>
                    <fullName>OmniChannel Third Party Agreements</fullName>
                </value>
                <value>
                    <fullName>PMTX Non-Academic</fullName>
                </value>
                <value>
                    <fullName>Technology Access Terms</fullName>
                </value>
                <value>
                    <fullName>Use Case 1</fullName>
                </value>
                <value>
                    <fullName>Use Case 2</fullName>
                </value>
                <value>
                    <fullName>Source Data</fullName>
                </value>
                <value>
                    <fullName>T&amp;E Costs</fullName>
                </value>
                <value>
                    <fullName>Ambulatory EMR or Oncology EMR data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - Indicates the duration in months of the contract from the start date</description>
        <label>Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Agreement_Value__c</fullName>
        <description>CLM-MC-CLMCMA-18680 - This formula field is used to store total agreement value.</description>
        <formula>Actual_Agreement_Value__c +  Project_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Agreement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <description>CLM-MC-CLMCMA-19112 - This formula field is used to store vendor account name.</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <description>CLM-MC-CLMCMA-19112 - This field is used to store vendor address.</description>
        <label>Vendor Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Legal_Entity__c</fullName>
        <description>CLM-MC-CLMCMA-19112 - This field is used to store vendor legal entity.</description>
        <label>Vendor Legal Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>CLM-MC-CLMCMA-17657 - This field stores version number of agreement.</description>           
        <defaultValue>0</defaultValue>
        <label>Version Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IQVIA Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FF_Agreement_Number__c</columns>
        <columns>Status_Category__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Ongoing_Work</fullName>
        <columns>FF_Agreement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Primary_Business_Line1__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Status_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status_Category__c</field>
            <operation>notEqual</operation>
            <value>In Effect,Amended,Expired,Terminated,Cancelled</value>
        </filters>
        <label>My Ongoing Work</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Ongoing_Work</fullName>
        <columns>FF_Agreement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Primary_Business_Line1__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Status_Category__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Request_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Team_s__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status_Category__c</field>
            <operation>notEqual</operation>
            <value>In Effect,Amended,Expired,Terminated,Cancelled</value>
        </filters>
        <label>My Teams Ongoing Work</label>
    </listViews>
    <listViews>
        <fullName>My_and_My_Team_s_Ongoing_Work</fullName>
        <columns>FF_Agreement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Primary_Business_Line1__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Status_Category__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Request_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_and_My_Team_s__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status_Category__c</field>
            <operation>notEqual</operation>
            <value>In Effect,Amended,Expired,Terminated,Cancelled</value>
        </filters>
        <label>My and My Team&apos;s Ongoing Work</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IQVIA Agreements</pluralLabel>
    <recordTypes>
        <fullName>Avacare</fullName>
        <active>true</active>
        <label>Avacare</label>
    </recordTypes>        
    <recordTypes>
        <fullName>USBU</fullName>
        <active>true</active>
        <label>USBU - SOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSA</fullName>
        <active>true</active>
        <label>USBU - MSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Agreement</fullName>
        <active>true</active>
        <description>CLM-MC-CLMCMA-19110 - Record for Vendor Agreements</description>
        <label>Vendor Agreement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Agreement_Team__c</fullName>
        <label>Agreement Team</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Agreement_Territory__c</fullName>
        <label>Agreement Territory</label>
    </sharingReasons>
    <validationRules>
        <fullName>AGR_VR01_CLM_SUBTYPE_READ_ONLY</fullName>
        <active>true</active>
        <description>CLM-MC-CLMCMA-17657- Validation Rule for Subtype can be read only when status category not equal &apos;Request&apos; and not changed to CO, Amendment and Termination Letter regardless of status category.</description>
        <errorConditionFormula>AND(NOT($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c), ISCHANGED(Subtype__c), NOT(ISBLANK(PRIORVALUE(Subtype__c))),$Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Integration&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Module&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Package Support&quot;, $Profile.Name &lt;&gt; &quot;IQVIA Salesforce Platform Support&quot;,OR(AND(OR(RecordType.DeveloperName = &apos;USBU&apos;,RecordType.DeveloperName = &apos;MSA&apos;),AND(NOT(AND(ISPICKVAL( Status_Category__c , &apos;Request&apos;),OR(ISPICKVAL(Subtype__c, &apos;Change Order&apos;), ISPICKVAL(Subtype__c, &apos;Amendment&apos;)),OR(ISPICKVAL(PRIORVALUE(Subtype__c),&apos;Change Order&apos;),ISPICKVAL(PRIORVALUE(Subtype__c), &apos;Amendment&apos;)))),NOT(ISPICKVAL( Status_Category__c , &apos;Request&apos;))))))</errorConditionFormula>
        <errorDisplayField>Subtype__c</errorDisplayField>
        <errorMessage>Requested Agreement Type change is allowed only in Request Status Category and You can&apos;t change Requested Agreement Type to CO, Amendment and Termination Letter in any Status Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AGR_VR02_CLM_Status_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c), OR(RecordType.DeveloperName = &apos;USBU&apos;,RecordType.DeveloperName = &apos;MSA&apos;),
(ISPICKVAL(Status__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status is required when you save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AGR_VR03_CLM_Status_Category_Check</fullName>
        <active>true</active>
        <description>CLM-MC-CLMCMA-17657- Validation rule to ensure that any value of status category is not skipped.</description>
        <errorConditionFormula>AND(NOT($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c), OR(RecordType.DeveloperName = &apos;USBU&apos;,RecordType.DeveloperName = &apos;MSA&apos;), ISCHANGED(Status_Category__c), ISPICKVAL(Status_Category__c, &apos;In Signatures&apos;), TEXT(PRIORVALUE(Status_Category__c)) = &apos;Request&apos;, $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Integration&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Module&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Package Support&quot;, $Profile.Name &lt;&gt; &quot;IQVIA Salesforce Platform Support&quot;)</errorConditionFormula>
        <errorDisplayField>Status_Category__c</errorDisplayField>
        <errorMessage>You cannot skip the Agreement Status Category. The allowed status category progression is: Request &gt; In Authoring  &gt; In Signature &gt; In Effect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AGR_VR04_CLM_Status_Category_In_Effect</fullName>
        <active>true</active>
        <description>CLM-MC-CLMCMA-17657- Validation rule to ensure users have been restricted to change the status category once agreement is Activated to &apos;Request&apos;, &apos;In Authoring&apos;, &apos;In Approval&apos;, In Signatures, &apos;In Filing&apos;</description>
        <errorConditionFormula>AND(NOT($Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c), OR(RecordType.DeveloperName = &apos;USBU&apos;,RecordType.DeveloperName = &apos;MSA&apos;), ISCHANGED(Status_Category__c),OR(ISPICKVAL(Status_Category__c, &apos;Request&apos;),ISPICKVAL(Status_Category__c, &apos;In Authoring&apos;), ISPICKVAL(Status_Category__c, &apos;In Signatures&apos;),ISPICKVAL(Status_Category__c, &apos;In Filing&apos;)), OR(TEXT(PRIORVALUE(Status_Category__c)) = &apos;In Effect&apos;, TEXT(PRIORVALUE(Status_Category__c)) = &apos;Expired&apos;, TEXT(PRIORVALUE(Status_Category__c)) = &apos;Terminated&apos;, TEXT(PRIORVALUE(Status_Category__c)) = &apos;Amended&apos;, TEXT(PRIORVALUE(Status_Category__c)) = &apos;Renewed&apos;, TEXT(PRIORVALUE(Status_Category__c)) = &apos;Cancelled&apos;), $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Integration&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Module&quot;, $Profile.Name &lt;&gt; &quot;System Administrator Package Support&quot;, $Profile.Name &lt;&gt; &quot;IQVIA Salesforce Platform Support&quot;)</errorConditionFormula>
        <errorDisplayField>Status_Category__c</errorDisplayField>
        <errorMessage>Status Category and Status cannot be changed for the activated agreement, Please contact CLM support team if you need to pull back the status</errorMessage>
    </validationRules>
</CustomObject>